--- a/frontend/index.html
+++ b/frontend/index.html
@@ -57,6 +57,9 @@
       </a>
 
       <span class="nav-section-label">Sistema</span>
+      <a href="#guia" data-route="guia" class="nav-item">
+        <span class="nav-icon">📖</span> Guia de Uso
+      </a>
       <a href="#configuracoes" data-route="configuracoes" class="nav-item">
         <span class="nav-icon">⚙</span> Configurações
       </a>
