--- a/frontend/privacidade.html
+++ b/frontend/privacidade.html
@@ -109,8 +109,10 @@
     <h2>8. Contato</h2>
     <p>Para dúvidas, solicitações ou para exercer seus direitos relacionados à privacidade, entre em contato:</p>
     <ul>
+      <li><strong>Empresa:</strong> Royal</li>
       <li><strong>Plataforma:</strong> AutomacaoAds</li>
-      <li><strong>E-mail:</strong> <a href="mailto:contato@automacaoads.com.br">contato@automacaoads.com.br</a></li>
+      <li><strong>E-mail:</strong> <a href="mailto:royalx481@gmail.com">royalx481@gmail.com</a></li>
+      <li><strong>WhatsApp / Telefone:</strong> <a href="https://wa.me/5511915172179">+55 11 91517-2179</a></li>
     </ul>
   </div>
 
